Now creating the src file separately